Initial implementation and added tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,14 +76,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 # Tests
 # ----------------------
 # Must be defined in top-most CMakeLists.txt file.
-# enable_testing()
+enable_testing()
 
 
 
 # ----------------------
 # Subdirectories
 # ----------------------
-# add_subdirectory(tests)
+add_subdirectory(tests)
 add_subdirectory(src/linked_lists)
 
 
